# AI-Playground

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  config.json.example
examples/: basic_usage.rs
include/: AIComponent.h  LLMInterface.h  PromptManager.h
src/: lib.rs  main.cpp  main.rs
src/components/: AIComponent.cpp  LLMInterface.cpp  PromptManager.cpp  ai_component.rs  llm_interface.rs  mod.rs  prompt_manager.rs
src/playground/: ai_playground.rs  mod.rs
tests/: integration_tests.rs
