[package]
name = "ai-playground"
version = "1.0.0"
edition = "2021"
authors = ["AI Playground Team"]
description = "A Rust project for experimenting with AI and LLM APIs"
license = "MIT"
repository = "https://github.com/your-username/ai-playground"

[dependencies]
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }
# Configuration management
config = "0.13"
# Environment variable handling
dotenv = "0.15"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[[bin]]
name = "ai-playground"
path = "src/main.rs" 